--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -1,6 +1,6 @@
 # (PART) Introduction {-}
 
-# Introduction {#introduction}
+# Introduction {#intro}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -15,19 +15,26 @@ microbiome data science. We show through concrete examples how to use
 the latest developments and data analytical strategies in
 R/Bioconductor for the manipulation, analysis, and reproducible
 reporting of hierarchical, heterogeneous, and multi-modal microbiome
-profiling data.
+profiling data. The data science methodology is tightly integrated
+with the broader R/Bioconductor ecosystem that focuses on the
+development of of high-quality open research software for life
+sciences (@Gentleman2004, @Huber2015). The support for modularity and
+interoperability is a key to efficient resource sharing and
+collaborative development both within and across research fields. The
+central data infrastructure, the `SummarizedExperiment` data container
+and its derivatives, have already been widely adopted in microbiome
+research, single cell sequencing, and in other fields, allowing a
+rapid adoption and extensions of emerging data science techniques
+across application domains.
 
-The data science methodology is tightly integrated with the broader
-R/Bioconductor ecosystem that focuses on the development of of
-high-quality open research software for life sciences (@Gentleman2004,
-@Huber2015). The support for modularity and interoperability is a key
-to efficient resource sharing and collaborative development both
-within and across research fields. The central data infrastructure,
-the `SummarizedExperiment` data container and its derivatives, have
-already been widely adopted in microbiome research, single cell
-sequencing, and in other fields, allowing a rapid adoption and
-extensions of emerging data science techniques across application
-domains.
+We assume that the reader is already familiar with R programming. For
+references and tips on introductory material for R and Bioconductor,
+see Chapter \@ref(resources). This online resource and its associated
+ecosystem of microbiome data science tools are a result of a
+community-driven development process, and welcoming new users and
+contributors. You can find more information on how to find us online
+and join the developer community through the project homepage at
+[microbiome.github.io](https://microbiome.github.io).
 
 The book is organized into three parts. We start by introducing the
 material and link to further resources for learning R and
@@ -41,27 +48,6 @@ specialized methods in subsequent sections. Third, *Workflows*,
 provides case studies for the various datasets used throughout the
 book. Finally, *Appendix*, links to further resources and
 acknowledgments.
-
-
-
-## Getting started
-
-The reader is already expected to be familiar with R
-programming. However, if you are new to R, you could try
-[swirl](https://swirlstats.com/) for a kickstart to R
-programming. Further support resources are available through the
-[Bioconductor project](http://bioconductor.org/).
-
-
-
-## Community support
-
-This online resource and its associated ecosystem of microbiome data
-science tools are a result of a community-driven development process,
-and welcoming new users and contributors. You can find more
-information on how to find us online and join the developer community
-through the project homepage at
-[microbiome.github.io](https://microbiome.github.io).
 
 
 
