--- a/95_resources.Rmd
+++ b/95_resources.Rmd
@@ -84,6 +84,11 @@ The (Tree)SummarizedExperiment objects can be converted into the alternative phy
 
 ## R programming resources
 
+If you are new to R, you could try [swirl](https://swirlstats.com/)
+for a kickstart to R programming. Further support resources are
+available through the [Bioconductor
+project](http://bioconductor.org/).
+
  * R programming basics: [Base R](https://www.rstudio.com/wp-content/uploads/2016/10/r-cheat-sheet-3.pdf)
  * Basics of R programming: [Base R](https://raw.githubusercontent.com/rstudio/cheatsheets/master/base-r.pdf)
  * [R cheat sheets](https://www.rstudio.com/resources/cheatsheets/)
