moved manipulation ch to focus topics part

--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -1,10 +1,12 @@
+# (PART) Focus Topics {-}
+
+
 # Data Manipulation {#datamanipulation}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
 ```
-
 
 
 ## Tidying and subsetting
