--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -46,6 +46,7 @@ tse <- atlas1006()
 # Counts relative abundances
 tse <- transformSamples(tse, method = "relabundance")
 
+library(miaViz)
 plotAbundanceDensity(tse, layout = "jitter", abund_values = "relabundance",
                      n = 40, point_size=1, point_shape=19, point_alpha=0.1) + 
     scale_x_log10(label=scales::percent)
@@ -202,7 +203,9 @@ plotRowTree(x[rowData(x)$Phylum %in% top_phyla_mean,],
 
 
 
-# Quality control
+
+
+## Quality control
 
 ```{r, message=FALSE}
 library(mia)
@@ -210,9 +213,8 @@ data("GlobalPatterns", package="mia")
 se <- GlobalPatterns 
 ```
 
-## Get top taxa and taxonomy   
 
-### Features  
+### Top taxa  
 
 The `getTopTaxa` can be used for identifying top taxa in the data.   
 ```{r top-feature-taxo}
@@ -221,7 +223,8 @@ tax_data <- rowData(se)[top_features,taxonomyRanks(se)]
 tax_data
 ```
 
-## Library size   
+
+### Library size   
 
 The total counts/sample can be calculated using the
 `perCellQCMetrics`/`addPerCellQC` from the `scater` package. The former one 
