--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -169,10 +169,8 @@ pheatmap(mat, annotation_row = taxa_clusters,
          annotation_col = sample_types)
 ```
 
-In addition to _pheatmap_ package, there are also other packages that provide 
-functions for more complex heatmaps. One example is _iheatmapr_ package. Examples
-of using it you can find from its 
-[vignette](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html).
+In addition to _pheatmap_ package, there are also other packages that
+provide functions for more complex heatmaps, such as [_iheatmapr_](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html).
 
 
 
@@ -185,11 +183,6 @@ if(!require(ecodist)){
 }
 ```
 
-```{r load-pkg-data}
-library(mia)
-data("GlobalPatterns", package="mia")
-tse <- GlobalPatterns
-```
 
 
 ### Dirichlet Multinomial Mixtures (DMM)
