--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -2,7 +2,7 @@
 library(rebook)
 chapterPreamble()
 ```
-# Beta Diversity
+# Community similarity
 
 Where alpha diversity focuses on community variation within a
 community (sample), beta diversity quantifies (dis-)similarites
