added refs bibtex

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -23,7 +23,7 @@ group with disease *X* vs a healthy control group might lead to
 important insights into the pathophysiology. Changes in the microbiota
 might be causal or a consequence of the disease. Either way, it can
 help to understand the system as a whole. Be aware that this approach
-has also been criticized [recently](https://arxiv.org/abs/2104.07266).
+has also been criticized recently [@quinnCritiqueDifferentialAbundance2021].
 
 
 ### Examples and tools
@@ -43,12 +43,11 @@ evaluating whether or not they perform well for this task, are:
 - [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)  
 
 
-We recommend to have a look at 
-[Nearing et al. (2021)](https://www.biorxiv.org/content/10.1101/2021.05.10.443486v1.full) who compared all these listed methods across 38
+We recommend to have a look at @nearingMicrobiomeDifferentialAbundance2021 who compared all these listed methods across 38
 different datasets. Because different methods have different approaches
 (parametric vs non-parametric, different normalization techiniques etc.) to
 perform the same task (test differential abundance), results can differ between
-methods. Unfortunately, as Nearing et al. (2021) point out, they differ disturbingly
+methods. Unfortunately, as @nearingMicrobiomeDifferentialAbundance2021 point out, they differ disturbingly
 much. Therefore, it is highly recommended to pick several methods to get an
 idea about how robust and potentially reproducible your findings are depending
 on the method. In this section we demonstrate 3 methods that can be recommended
@@ -91,7 +90,7 @@ set.seed(1)
 ### Prevalence Filtering 
 
 Before we jump to our analyses, we may want to perform prevalence filtering.
-Nearing et al. (2021) found that applying a 10% threshold for the prevalence of
+@nearingMicrobiomeDifferentialAbundance2021 found that applying a 10% threshold for the prevalence of
 the taxa generally resulted in more robust results. Some tools have builtin
 arguments for that. By applying the threshold to our input data, we can make
 sure it is applied for all tools. Below we show how to do this in `mia`:
@@ -106,7 +105,7 @@ In this section, we will show how to perform a simple ALDEx2 analysis. If you
 would choose to pick a single method, this method could be recommended to use.
 According to the developers experience, it tends to identify the common
 features identified by other methods. This statement is in line with a recent
-independent evaluation by Nearing et al. (2021).  Please also have a look at
+independent evaluation by @nearingMicrobiomeDifferentialAbundance2021.  Please also have a look at
 the more extensive [vignette](https://bioconductor.org/packages/release/bioc/vignettes/ALDEx2/inst/doc/ALDEx2_vignette.html) 
 that covers this flexible tool in more depth. ALDEx2 estimates technical
 variation within each sample per taxon by utilizing the Dirichlet distribution.
@@ -195,13 +194,14 @@ rownames_to_column(aldex_out, "genus") %>%
 
 ### ANCOM-BC
 
-[The analysis of composition of microbiomes with bias correction 
-(ANCOM-BC)](https://www.nature.com/articles/s41467-020-17041-7) 
+The analysis of composition of microbiomes with bias correction 
+(ANCOM-BC) [@linAnalysisCompositionsMicrobiomes2020] 
 is a recently developed method for differential abundance testing. It is based
 on an 
-[earlier published approach](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4450248/). 
+earlier published approach [@mandalAnalysisCompositionMicrobiomes2015]. 
 The previous version of ANCOM was among the methods that produced the 
-[most consistent results and is probably a conservative approach](https://www.biorxiv.org/content/10.1101/2021.05.10.443486v1.full). 
+most consistent results and is probably a conservative approach
+[@nearingMicrobiomeDifferentialAbundance2021]. 
 However, the new ANCOM-BC method operates quite differently compared to the
 former ANCOM method.
 
@@ -468,7 +468,7 @@ package, that offers a Multinomial Logistic-Normal Linear Regression model; see
 
 
 The following presents such an exemplary analysis based on the 
-[Sprockett et al. (2020)](https://doi.org/10.1038/s41467-020-17541-6) available
+data of @sprockettMicrobiotaAssemblyStructure2020 available
 through `microbiomeDataSets` package.
 
 
