--- a/book.bib
+++ b/book.bib
@@ -789,3 +789,83 @@ Bioconductor},
     note = {ISBN 978-1498716963},
     url = {http://yihui.org/knitr/},
 }
+
+
+
+@article{quinnCritiqueDifferentialAbundance2021,
+  title = {A {{Critique}} of {{Differential Abundance Analysis}}, and {{Advocacy}} for an {{Alternative}}},
+  author = {Quinn, Thomas P. and {Gordon-Rodriguez}, Elliott and Erb, Ionas},
+  year = {2021},
+  month = apr,
+  journal = {arXiv:2104.07266 [q-bio, stat]},
+  eprint = {2104.07266},
+  eprinttype = {arxiv},
+  primaryclass = {q-bio, stat},
+  abstract = {It is largely taken for granted that differential abundance analysis is, by default, the best first step when analyzing genomic data. We argue that this is not necessarily the case. In this article, we identify key limitations that are intrinsic to differential abundance analysis: it is (a) dependent on unverifiable assumptions, (b) an unreliable construct, and (c) overly reductionist. We formulate an alternative framework called ratio-based biomarker analysis which does not suffer from the identified limitations. Moreover, ratio-based biomarkers are highly flexible. Beyond replacing DAA, they can also be used for many other bespoke analyses, including dimension reduction and multi-omics data integration.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Quantitative Biology - Genomics,Statistics - Methodology},
+  file = {/Users/henrikeckermann/Zotero/storage/TQGUMRYU/Quinn et al. - 2021 - A Critique of Differential Abundance Analysis, and.pdf}
+}
+
+
+@techreport{nearingMicrobiomeDifferentialAbundance2021,
+  type = {Preprint},
+  title = {Microbiome Differential Abundance Methods Produce Disturbingly Different Results across 38 Datasets},
+  author = {Nearing, Jacob T. and Douglas, Gavin M. and Hayes, Molly and MacDonald, Jocelyn and Desai, Dhwani and Allward, Nicole and Jones, Casey M. A. and Wright, Robyn and Dhanani, Akhilesh and Comeau, Andr{\'e} M. and Langille, Morgan G. I.},
+  year = {2021},
+  month = may,
+  institution = {{Bioinformatics}},
+  doi = {10.1101/2021.05.10.443486},
+  abstract = {Abstract           Identifying differentially abundant microbes is a common goal of microbiome studies. Multiple methods have been applied for this purpose, which are largely used interchangeably in the literature. Although it has been observed that these tools can produce different results, there have been very few large-scale comparisons to describe the scale and significance of these differences. In addition, it is challenging for microbiome researchers to know which differential abundance tools are appropriate for their study and how these tools compare to one another. Here, we have investigated these questions by analyzing 38 16S rRNA gene datasets with two sample groups for differential abundance testing. We tested for differences in amplicon sequence variants and operational taxonomic units (referred to as ASVs for simplicity) between these groups with 14 commonly used differential abundance tools. Our findings confirmed that these tools identified drastically different numbers and sets of significant ASVs, however, for many tools the number of features identified correlated with aspects of the tested study data, such as sample size, sequencing depth, and effect size of community differences. We also found that the ASVs identified by each method were dependent on whether the abundance tables were prevalence-filtered before testing. ALDEx2 and ANCOM produced the most consistent results across studies and agreed best with the intersect of results from different approaches. In contrast, several methods, such as LEfSe, limma voom, and edgeR, produced inconsistent results and in some cases were unable to control the false discovery rate. In addition to these observations, we were unable to find supporting evidence for a recent recommendation that limma voom, corncob, and DESeq2 are more reliable overall compared with other methods. Although ALDEx2 and ANCOM are two promising conservative methods, we argue that those researchers requiring more sensitive methods should use a consensus approach based on multiple differential abundance methods to help ensure robust biological interpretations.},
+  langid = {english},
+  file = {/Users/henrikeckermann/Zotero/storage/DQQR7BWJ/Nearing et al. - 2021 - Microbiome differential abundance methods produce .pdf}
+}
+
+@article{linAnalysisCompositionsMicrobiomes2020,
+  title = {Analysis of Compositions of Microbiomes with Bias Correction},
+  author = {Lin, Huang and Peddada, Shyamal Das},
+  year = {2020},
+  month = dec,
+  journal = {Nat Commun},
+  volume = {11},
+  number = {1},
+  pages = {3514},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-020-17041-7},
+  langid = {english},
+  file = {/Users/henrikeckermann/Zotero/storage/DHDQWYVW/Lin and Peddada - 2020 - Analysis of compositions of microbiomes with bias .pdf}
+}
+
+
+@article{mandalAnalysisCompositionMicrobiomes2015,
+  title = {Analysis of Composition of Microbiomes: A Novel Method for Studying Microbial Composition},
+  shorttitle = {Analysis of Composition of Microbiomes},
+  author = {Mandal, Siddhartha and Van Treuren, Will and White, Richard A. and Eggesb{\o}, Merete and Knight, Rob and Peddada, Shyamal D.},
+  year = {2015},
+  month = may,
+  journal = {Microbial Ecology in Health \& Disease},
+  volume = {26},
+  number = {0},
+  issn = {1651-2235},
+  doi = {10.3402/mehd.v26.27663},
+  abstract = {Background: Understanding the factors regulating our microbiota is important but requires appropriate statistical methodology. When comparing two or more populations most existing approaches either discount the underlying compositional structure in the microbiome data or use probability models such as the multinomial and Dirichlet-multinomial distributions, which may impose a correlation structure not suitable for microbiome data. Objective: To develop a methodology that accounts for compositional constraints to reduce false discoveries in detecting differentially abundant taxa at an ecosystem level, while maintaining high statistical power. Methods: We introduced a novel statistical framework called analysis of composition of microbiomes (ANCOM). ANCOM accounts for the underlying structure in the data and can be used for comparing the composition of microbiomes in two or more populations. ANCOM makes no distributional assumptions and can be implemented in a linear model framework to adjust for covariates as well as model longitudinal data. ANCOM also scales well to compare samples involving thousands of taxa. Results: We compared the performance of ANCOM to the standard t-test and a recently published methodology called Zero Inflated Gaussian (ZIG) methodology (1) for drawing inferences on the mean taxa abundance in two or more populations. ANCOM controlled the false discovery rate (FDR) at the desired nominal level while also improving power, whereas the t-test and ZIG had inflated FDRs, in some instances as high as 68\% for the t-test and 60\% for ZIG. We illustrate the performance of ANCOM using two publicly available microbial datasets in the human gut, demonstrating its general applicability to testing hypotheses about compositional differences in microbial communities. Conclusion: Accounting for compositionality using log-ratio analysis results in significantly improved inference in microbiota survey data.},
+  langid = {english},
+  file = {/Users/henrikeckermann/Zotero/storage/Z2JYHTAK/Mandal et al. - 2015 - Analysis of composition of microbiomes a novel me.pdf}
+}
+
+@article{sprockettMicrobiotaAssemblyStructure2020,
+  title = {Microbiota Assembly, Structure, and Dynamics among {{Tsimane}} Horticulturalists of the {{Bolivian Amazon}}},
+  author = {Sprockett, Daniel D. and Martin, Melanie and Costello, Elizabeth K. and Burns, Adam R. and Holmes, Susan P. and Gurven, Michael D. and Relman, David A.},
+  year = {2020},
+  month = dec,
+  journal = {Nat Commun},
+  volume = {11},
+  number = {1},
+  pages = {3772},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-020-17541-6},
+  abstract = {Abstract             Selective and neutral forces shape human microbiota assembly in early life. The Tsimane are an indigenous Bolivian population with infant care-associated behaviors predicted to increase mother-infant microbial dispersal. Here, we characterize microbial community assembly in 47 infant-mother pairs from six Tsimane villages, using 16S rRNA gene amplicon sequencing of longitudinal stool and tongue swab samples. We find that infant consumption of dairy products, vegetables, and chicha (a fermented drink inoculated with oral microbes) is associated with stool microbiota composition. In stool and tongue samples, microbes shared between mothers and infants are more abundant than non-shared microbes. Using a neutral model of community assembly, we find that neutral processes alone explain the prevalence of 79\% of infant-colonizing microbes, but explain microbial prevalence less well in adults from river villages with more regular access to markets. Our results underscore the importance of neutral forces during microbiota assembly. Changing lifestyle factors may alter traditional modes of microbiota assembly by decreasing the role of neutral processes.},
+  langid = {english},
+  file = {/Users/henrikeckermann/Zotero/storage/D59QN8JL/Sprockett et al. - 2020 - Microbiota assembly, structure, and dynamics among.pdf}
+}
