--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -1,4 +1,4 @@
-# Cross-correlation {#cross-correlation}
+# Multi-assay analyses {#multi-assay_analyses}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -11,8 +11,6 @@ if(!require(ecodist)){
 
 ```{r load-pkg-data}
 library(mia)
-data("GlobalPatterns", package="mia")
-tse <- GlobalPatterns
 ```
 
 With cross-correlation analysis, we can analyze how strongly and how differently
@@ -27,32 +25,32 @@ data](https://peerj.com/articles/32/).
 
 ```{r cross-correlation1}
 # Imports the data
-tse <- microbiomeDataSets::peerj32()
+mae <- microbiomeDataSets::peerj32()
 
 # Microbiome data
-tse[[1]] 
+mae[[1]] 
 ```
 
 ```{r cross-correlation2}
 # Lipid data
-tse[[2]]
+mae[[2]]
 ```
 
 ```{r cross-correlation3}
-if(!require(microbiome)){
-    BiocManager::install("microbiome")
-}
 
 # Does log10 transform for microbiome data
-tse[[1]] <- transformSamples(tse[[1]], method = "log10", pseudocount = 1)
+mae[[1]] <- transformSamples(mae[[1]], method = "log10", pseudocount = 1)
 
 # Gets microbiome and lipid data to cross-correlate
-x <- t(assay(tse[[1]], "log10"))
-y <- t(assay(tse[[2]], "counts"))
+x <- t(assay(mae[[1]], "log10"))
+y <- t(assay(mae[[2]], "counts"))
 
 # Cross correlates data sets
-correlation_table <- microbiome::associate(x, y, method = "spearman", mode = "table", 
-                                           p.adj.threshold = 0.05, n.signif = 1)
+correlation_table <- testForExperimentCrossCorrelation(mae, 
+                                                       abund_values1 = "log10", 
+                                                       abund_values2 = "counts",
+                                                       method = "spearman", 
+                                                       p.adj.threshold = 0.05)
 
 knitr::kable(head(correlation_table))
 ```
@@ -67,18 +65,18 @@ if(!require(dplyr)){
     install.packages("dplyr")
 }
 # Gets taxa that have at least one statistically significant correlation
-taxa <- correlation_table %>% dplyr::filter(p.adj < 0.05 & abs(Correlation) > 0) %>% 
-  dplyr::select(X1) %>% unique %>% sapply(as.character)
+taxa <- correlation_table %>% dplyr::filter(p_adj < 0.05 & abs(cor) > 0) %>% 
+  dplyr::select(Var1) %>% unique %>% sapply(as.character)
 # Gets taxa that have at least one statistically significant correlation
-lipids <- correlation_table %>% dplyr::filter(p.adj < 0.05 & abs(Correlation) > 0) %>% 
-  dplyr::select(X2) %>% unique %>% sapply(as.character)
+lipids <- correlation_table %>% dplyr::filter(p_adj < 0.05 & abs(cor) > 0) %>% 
+  dplyr::select(Var2) %>% unique %>% sapply(as.character)
 
 # Takes only those taxa and lipids that have statistically significant values
-correlation_table <- correlation_table[correlation_table[["X1"]] %in% taxa & 
-                                           correlation_table[["X2"]] %in% lipids, ]
+correlation_table <- correlation_table[correlation_table[["Var1"]] %in% taxa & 
+                                           correlation_table[["Var2"]] %in% lipids, ]
 
 # Converts data to matrix, correlations as values
-mat <- reshape2::acast(correlation_table, X2 ~ X1, value.var = "Correlation")
+mat <- reshape2::acast(correlation_table, Var2 ~ Var1, value.var = "cor")
 
 # Hierarchical clustering, gets the order of taxa and lipids
 taxa_indices <- hclust(as.dist(1 - cor(mat, use="pairwise.complete.obs")))$order
@@ -87,30 +85,34 @@ lipids_indices <- hclust(as.dist(1 - cor(t(mat), use="pairwise.complete.obs")))$
 order_lipids <- rownames(mat)[lipids_indices]
 
 # Converts taxa and lipids columns to factor so that they have the desired order
-correlation_table[["X1"]] <- factor(correlation_table[["X1"]], levels = order_taxa)
-correlation_table[["X2"]] <- factor(correlation_table[["X2"]], levels = order_lipids)
+correlation_table[["Var1"]] <- factor(correlation_table[["Var1"]], levels = order_taxa)
+correlation_table[["Var2"]] <- factor(correlation_table[["Var2"]], levels = order_lipids)
 ```
 
 Creates the heatmap
 
 ```{r cross-correlation5, fig.height = 8, fig.width = 6}
+if(!require(ggplot2)){
+    install.packages("ggplot2")
+    library(ggplot2)
+}
 # Determines the scaling of colors
 limits <- c(-1, 1)
 breaks <- seq(from = min(limits), to = max(limits), by = 0.2)
 colours <- c("darkblue", "blue", "white", "red", "darkred")
 
 # Which observation have p-value under 0.05? --> creates a subset
-cor_table_sub <- correlation_table[which(correlation_table[["Correlation"]] < 0.05), ]
+cor_table_sub <- correlation_table[which(correlation_table[["cor"]] < 0.05), ]
 
 # Creates a ggplot object
-ggplot(correlation_table, aes(x = X1, y = X2, fill = Correlation)) +
+ggplot(correlation_table, aes(x = Var1, y = Var2, fill = cor)) +
   geom_tile() +
   
-  scale_fill_gradientn(name = "Correlation", 
+  scale_fill_gradientn(name = "cor", 
                        breaks = breaks, limits = limits, colours = colours) + 
   
   # Adds label to those observations that have p-value under 0.05
-  geom_text(data = cor_table_sub, aes(x = X1, y = X2, label = "+")) +
+  geom_text(data = cor_table_sub, aes(x = Var1, y = Var2, label = "+")) +
   
   theme(text = element_text(size=10),
         axis.text.x = element_text(angle=45, hjust=1),
