Added some text

--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -15,7 +15,9 @@ library(mia)
 
 With cross-correlation analysis, we can analyze how strongly and how differently
 variables are associated between each other. For instance, we can analyze if 
-higher presence of a specific taxon equals to higher levels of a biomolecule. 
+higher presence of a specific taxon equals to higher levels of a biomolecule.
+This kind of approach where we integrate information from multiple sources is 
+called multiomics. 
 
 Here, we analyze associations between taxa correlate and lipids. Data is from 
 following publication Lahti _et al_. (2015) [Associations between the human intestinal 
