--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -43,39 +43,23 @@ mae[[2]]
 # Does log10 transform for microbiome data
 mae[[1]] <- transformSamples(mae[[1]], method = "log10", pseudocount = 1)
 
-# Gets microbiome and lipid data to cross-correlate
-x <- t(assay(mae[[1]], "log10"))
-y <- t(assay(mae[[2]], "counts"))
-
 # Cross correlates data sets
 correlation_table <- testForExperimentCrossCorrelation(mae, 
                                                        abund_values1 = "log10", 
                                                        abund_values2 = "counts",
                                                        method = "spearman", 
-                                                       p.adj.threshold = 0.05)
+                                                       p_adj_threshold = 0.05,
+                                                       cor_threshold = 0)
 
 knitr::kable(head(correlation_table))
 ```
 
-Manipulates and reorders the table
+Reorders the table
 
 ```{r cross-correlation4}
 if(!require(reshape2)){
     install.packages("reshape2")
 }
-if(!require(dplyr)){
-    install.packages("dplyr")
-}
-# Gets taxa that have at least one statistically significant correlation
-taxa <- correlation_table %>% dplyr::filter(p_adj < 0.05 & abs(cor) > 0) %>% 
-  dplyr::select(Var1) %>% unique %>% sapply(as.character)
-# Gets taxa that have at least one statistically significant correlation
-lipids <- correlation_table %>% dplyr::filter(p_adj < 0.05 & abs(cor) > 0) %>% 
-  dplyr::select(Var2) %>% unique %>% sapply(as.character)
-
-# Takes only those taxa and lipids that have statistically significant values
-correlation_table <- correlation_table[correlation_table[["Var1"]] %in% taxa & 
-                                           correlation_table[["Var2"]] %in% lipids, ]
 
 # Converts data to matrix, correlations as values
 mat <- reshape2::acast(correlation_table, Var2 ~ Var1, value.var = "cor")
