--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -142,7 +142,7 @@ breaks <- seq(from = min(limits), to = max(limits), by = 0.2)
 colours <- c("darkblue", "blue", "white", "red", "darkred")
 
 # Which observation have p-value under 0.05? --> creates a subset
-cor_table_sub <- correlation_table[which(correlation_table[["cor"]] < 0.05), ]
+cor_table_sub <- correlation_table[which(correlation_table[["p_adj"]] < 0.05), ]
 
 # Creates a ggplot object
 ggplot(correlation_table, aes(x = Var1, y = Var2, fill = cor)) +
