--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -148,7 +148,7 @@ cor_table_sub <- correlation_table[which(correlation_table[["p_adj"]] < 0.05), ]
 ggplot(correlation_table, aes(x = Var1, y = Var2, fill = cor)) +
   geom_tile() +
   
-  scale_fill_gradientn(name = "cor", 
+  scale_fill_gradientn(name = "Correlation", 
                        breaks = breaks, limits = limits, colours = colours) + 
   
   # Adds label to those observations that have p-value under 0.05
