--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -240,7 +240,7 @@ tse
 Agglomerating the data at a Genus level and getting the dominant taxa per sample.
 
 ```{r}
-tse_Genus <- agglomerateByRank(tse, rank="Genus")
+tse_Genus <- agglomerateByRank(tse, rank="genus")
 tse_Genus <- addPerSampleDominantTaxa(tse_Genus,abund_values="relative_abundance", name = "dominant_taxa")
 ```
 
