--- a/97_interactive_3d_plots.Rmd
+++ b/97_interactive_3d_plots.Rmd
@@ -39,7 +39,7 @@ tse <- sampleMetadata %>%
     filter(!is.na(alcohol)) %>% # excluding missing values
     returnSamples("relative_abundance")
 
-tse_Genus <- agglomerateByRank(tse, rank="Genus")
+tse_Genus <- agglomerateByRank(tse, rank="genus")
 tse_Genus <- addPerSampleDominantTaxa(tse_Genus,abund_values="relative_abundance", name = "dominant_taxa")
 
 # Performing PCoA with Bray-Curtis dissimilarity.
